<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>parent</artifactId>
        <groupId>org.lonelycoder</groupId>
        <version>1.0-SNAPSHOT</version>
        <relativePath>../parent/pom.xml</relativePath>
    </parent>

    <modelVersion>4.0.0</modelVersion>
    <artifactId>server</artifactId>
    <packaging>war</packaging>

    <properties>
        <mysql.version>5.1.25</mysql.version>
        <h2.version>1.4.181</h2.version>
        <jetty-maven-plugin.version>8.1.8.v20121106</jetty-maven-plugin.version>
        <tomcat7-maven-plugin.version>2.2</tomcat7-maven-plugin.version>
        <tomcat-jdbc.version>7.0.53</tomcat-jdbc.version>
    </properties>

    <dependencies>

        <dependency>
            <groupId>org.apache.tomcat</groupId>
            <artifactId>tomcat-jdbc</artifactId>
            <version>${tomcat-jdbc.version}</version>
            <scope>runtime</scope>
        </dependency>

        <!-- MySQL 数据库 -->
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>${mysql.version}</version>
        </dependency>

        <!-- H2 嵌入式数据库 -->
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>${h2.version}</version>
            <scope>runtime</scope>
        </dependency>

        <!-- 引入核心模块 -->
        <dependency>
            <groupId>org.lonelycoder</groupId>
            <artifactId>core</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>

    </dependencies>


    <!-- 构建服务插件 -->
    <build>
        <finalName>lonelycoder_web</finalName>
        <plugins>

            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.0.2</version>
                <configuration>
                    <encoding>utf-8</encoding>
                    <source>1.6</source>
                    <target>1.6</target>
                    <meminitial>128m</meminitial>
                    <maxmem>512m</maxmem>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-eclipse-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <additionalProjectnatures>
                        <projectnature>
                            org.springframework.ide.eclipse.core.springnature
                        </projectnature>
                    </additionalProjectnatures>
                    <additionalBuildcommands>
                        <buildcommand>
                            org.springframework.ide.eclipse.core.springbuilder
                        </buildcommand>
                    </additionalBuildcommands>
                    <downloadSources>true</downloadSources>
                    <downloadJavadocs>true</downloadJavadocs>
                    <wtpversion>1.5</wtpversion>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.4.3</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

            <!-- Jetty插件 -->
            <plugin>
                <groupId>org.mortbay.jetty</groupId>
                <artifactId>jetty-maven-plugin</artifactId>
                <version>${jetty-maven-plugin.version}</version>
                <configuration>

                    <systemProperties>
                        <systemProperty>
                            <name>MAVEN_OPTS</name>
                            <value>"-Xms512m -Xmx1024m -XX:MaxPermSize=384m"</value>
                        </systemProperty>
                        <systemProperty>
                            <name>JVM-ARG</name>
                            <value>"-XX:MaxPermSize=386m"</value>
                        </systemProperty>
                        <systemProperty>
                            <name>JAVA_OPTS</name>
                            <value>"-Xms512m -Xmx1024m"</value>
                        </systemProperty>
                        <systemProperty>
                            <name>spring.profiles.active</name>
                            <value>development</value>
                        </systemProperty>
                    </systemProperties>

                    <!-- Jetty 构建的时候也使用 test 目录 -->
                    <useTestClasspath>true</useTestClasspath>

                    <!-- webapp的相对路径 (如果web目录是特殊位置的时候,需要配置)
                    <webAppSourceDirectory>webapp</webAppSourceDirectory>
                    -->

                    <webAppConfig>
                        <contextPath>/${project.build.finalName}</contextPath>
                    </webAppConfig>
                </configuration>
            </plugin>

            <!-- Tomcat插件 -->
            <plugin>
                <groupId>org.apache.tomcat.maven</groupId>
                <artifactId>tomcat7-maven-plugin</artifactId>
                <version>${tomcat7-maven-plugin.version}</version>
                <configuration>
                    <path>/${project.build.finalName}</path>
                </configuration>

            </plugin>
        </plugins>
    </build>

</project>